--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-area" data-value="area" title="" data-i18n="[title]chart.type.area.title"><span></span></button><br />
 
               <button type="button" class="btn btn-default snte-chart-wizard-type active" id="snte-chart-wizard-type-vbar" data-value="vbar" title="" data-i18n="[title]chart.type.vbar.title"><span></span></button>
-              <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-hbar" data-value="hbar" title="" data-i18n="[title]chart.type.hbar.title"><span></span></button><br />
+              <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-hbar" data-value="hbar" title="" data-i18n="[title]chart.type.hbar.title"><span></span></button>
+              <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-histogram" data-value="histogram" title="" data-i18n="[title]chart.type.histogram.title"><span></span></button><br />
 
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-pie" data-value="pie" title="" data-i18n="[title]chart.type.pie.title"><span></span></button>
               <button type="button" class="btn btn-default snte-chart-wizard-type" id="snte-chart-wizard-type-donut" data-value="donut" title="" data-i18n="[title]chart.type.donut.title"><span></span></button>
@@ -354,6 +355,12 @@
               <li>
                 <a href="#" data-item="image" data-i18n="[append]chrome.new-element-image">
                   <span class="icon-image"></span>
+                </a>
+              </li>
+              <li role="presentation" class="divider" style="clear: both;"></li>
+              <li>
+                <a href="#" data-item="histogram" data-i18n="[append]chrome.new-element-histogram">
+                  <span class="icon-bars"></span>
                 </a>
               </li>
             </ul>
